<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_white_36dp"
        android:title="Add"
        app:showAsAction="ifRoom" />

</menu>