<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.Study">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <Button
            android:id="@+id/study_foreign_phrase_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:gravity="center"
            android:textColor="#252424"
            android:textSize="12pt"
            android:background="@null"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#c0c0c0" />

        <ListView
            android:id="@+id/study_sentences_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:listitem="@layout/study_sentence_list" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#c0c0c0" />

        <ListView
            android:id="@+id/study_meanings_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/study_no_cards_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No cards in this deck."
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:textSize="12pt"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/study_translate_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_g_translate_white_36dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/study_forward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_arrow_forward_white_36dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/study_backward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="84dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_arrow_back_white_36dp" />


</RelativeLayout>